data/theme/feather/index.css
@import "../../template/basic/index.css";
@import "modifications.css";

:root {
	/* Tabbrowser */
	--vtr-tabbrowser-background-color: #F9F9FA;

	/* Tab Toolbar */
	--vtr-tabbar-height: 22px;
	--vtr-tabbar-background-color: rgb(207,219,236);

	/* Single tab */
	--vtr-tab-text-color: #333333;
	--vtr-tab-background-color: #F9F9FA;
	--vtr-tab-background: #F9F9FA;
	--vtr-tab-font-size: 3mm;
	--vtr-tab-font-weight: normal;
	--vtr-tab-text-shadow: none;
	--vtr-tab-height: 25px;
	--vtr-tab-min-height: 25px;
	--vtr-tab-max-height: 25px;
	--vtr-tab-border-radius: 2.67px 0 0 2.67px;
	--vtr-tab-border-top-width: 0;
	--vtr-tab-border-top-style: solid;
	--vtr-tab-border-top-color: transparent;
	--vtr-tab-border-right-width: 0px; /* FIXME: Border right 1px wanted from original draft? */
	--vtr-tab-border-right-style: solid;
	--vtr-tab-border-right-color: #5E6972;
	--vtr-tab-border-bottom-width: 1px;
	--vtr-tab-border-bottom-style: solid;
	--vtr-tab-border-bottom-color: #bbc3cc;
	--vtr-tab-border-left-width: 4px;
	--vtr-tab-border-left-style: solid;
	--vtr-tab-border-left-color: transparent;
	--vtr-tab-margin-top: 0;
	--vtr-tab-margin-right: 0;
	--vtr-tab-margin-bottom: 0;
	--vtr-tab-margin-left: 0;
	--vtr-tab-padding-top: 1px;
	--vtr-tab-padding-right: 0;
	--vtr-tab-padding-bottom: 1px;
	--vtr-tab-padding-left: 0;

	/* Single tab selected */
	--vtr-tab-selected-text-color: HighlightText;
	--vtr-tab-selected-background-color: Highlight;
	--vtr-tab-selected-background: Highlight;
	--vtr-tab-selected-font-weight: bold;
	--vtr-tab-selected-text-shadow: none;
	--vtr-tab-selected-border-radius: 0;
	--vtr-tab-selected-border-top-width: var(--vtr-tab-border-top-width);
	--vtr-tab-selected-border-top-style: var(--vtr-tab-border-top-style);
	--vtr-tab-selected-border-top-color: var(--vtr-tab-border-top-color);
	--vtr-tab-selected-border-right-width: var(--vtr-tab-border-right-width);
	--vtr-tab-selected-border-right-style: var(--vtr-tab-border-right-style);
	--vtr-tab-selected-border-right-color: var(--vtr-tab-border-right-color);
	--vtr-tab-selected-border-bottom-width: var(--vtr-tab-border-bottom-width);
	--vtr-tab-selected-border-bottom-style: var(--vtr-tab-border-bottom-style);
	--vtr-tab-selected-border-bottom-color: var(--vtr-tab-border-bottom-color);
	--vtr-tab-selected-border-left-width: 3px;
	--vtr-tab-selected-border-left-style: solid;
	--vtr-tab-selected-border-left-color: #002A8A;
	--vtr-tab-selected-margin-top: 1px;
	--vtr-tab-selected-margin-right: 0;
	--vtr-tab-selected-margin-bottom: 1px;
	--vtr-tab-selected-margin-left: 0;
	--vtr-tab-selected-padding-top: 0;
	--vtr-tab-selected-padding-right: 0;
	--vtr-tab-selected-padding-bottom: 0;
	--vtr-tab-selected-padding-left: 0;

	/* Single tab pinned */
	--vtr-tab-pinned-text-color: #333333;
	--vtr-tab-pinned-background-color: rgb(207,219,236);
	--vtr-tab-pinned-background: rgb(207,219,236);
	--vtr-tab-pinned-font-weight: normal;
	--vtr-tab-pinned-text-shadow: none;
	--vtr-tab-pinned-border-radius: 0;
	--vtr-tab-pinned-border-top-width: var(--vtr-tab-border-top-width);
	--vtr-tab-pinned-border-top-style: var(--vtr-tab-border-top-style);
	--vtr-tab-pinned-border-top-color: var(--vtr-tab-border-top-color);
	--vtr-tab-pinned-border-right-width: var(--vtr-tab-border-right-width);
	--vtr-tab-pinned-border-right-style: var(--vtr-tab-border-right-style);
	--vtr-tab-pinned-border-right-color: var(--vtr-tab-border-right-color);
	--vtr-tab-pinned-border-bottom-width: var(--vtr-tab-border-bottom-width);
	--vtr-tab-pinned-border-bottom-style: var(--vtr-tab-border-bottom-style);
	--vtr-tab-pinned-border-bottom-color: var(--vtr-tab-border-bottom-color);
	--vtr-tab-pinned-border-left-width: 2px;
	--vtr-tab-pinned-border-left-style: solid;
	--vtr-tab-pinned-border-left-color: #2292D0;
	--vtr-tab-pinned-margin-top: 0;
	--vtr-tab-pinned-margin-right: 0;
	--vtr-tab-pinned-margin-bottom: 0;
	--vtr-tab-pinned-margin-left: 0;
	--vtr-tab-pinned-padding-top: 1px;
	--vtr-tab-pinned-padding-right: 0;
	--vtr-tab-pinned-padding-bottom: 1px;
	--vtr-tab-pinned-padding-left: 0;

	/* Single tab hover */
	--vtr-tab-hover-background-color: #ebebeb;
	--vtr-tab-hover-background: #ebebeb;
	--vtr-tab-hover-margin-top: var(--vtr-tab-margin-top);
	--vtr-tab-hover-margin-right: var(--vtr-tab-margin-right);
	--vtr-tab-hover-margin-bottom: var(--vtr-tab-margin-bottom);
	--vtr-tab-hover-margin-left: var(--vtr-tab-margin-left);
	--vtr-tab-hover-padding-top: var(--vtr-tab-padding-top);
	--vtr-tab-hover-padding-right: var(--vtr-tab-padding-right);
	--vtr-tab-hover-padding-bottom: var(--vtr-tab-padding-bottom);
	--vtr-tab-hover-padding-left: var(--vtr-tab-padding-left);
	--vtr-tab-hover-border-top: thin solid #000000;
	--vtr-tab-hover-border-bottom: thin solid #000000;

	/* Close buttons */
	--vtr-tab-button-close-width: 18px;
	--vtr-tab-button-close-height: 18px;
	--vtr-tab-button-close-regular-background-image: url("../../template/basic/icons/light/close-regular.png");
	--vtr-tab-button-close-hover-background-image: url("../../template/basic/icons/light/close-hover.png");
	--vtr-tab-button-close-active-background-image: url("../../template/basic/icons/light/close-active.png");

	/* Sound buttons */
	--vtr-tab-button-sound-width: 17px;
	--vtr-tab-button-sound-height: 17px;
	--vtr-tab-button-sound-playing-background-image: url("../../chrome/icon/tab-audio-playing.svg");
	--vtr-tab-button-sound-muted-background-image: url("../../chrome/icon/tab-audio-muted.svg");

	/* Splitter/Separation between tabbar and website
	--vtr-splitter-background: #d6e5f5;
	--vtr-splitter-width: 3px;
	--vtr-splitter-border-left-size: 1px;
	--vtr-splitter-border-left-color: #fcfcfc;
	--vtr-splitter-border-right-size: 1px;
	--vtr-splitter-border-right-color: #fcfcfc;  */
}

